kubernetes/visus-ondemand.yaml
#
# Kubernetes startup file for ViSUS On-Demand Docker image
# 
# (this version is specifically for aims2.llnl.gov)
#

apiVersion: apps/v1
kind: Deployment
metadata:
#<ctc> todo: change to this (about) everywhere, just not doing it first since it might affect url mapping (/visus could become /visus-ondemand and we don't want that; probably just the one at the end, but need to be sure other stuff is working first)
#  name: visus-ondemand
  name: visus
  labels:
    app: visus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visus
  template:
    metadata:
      labels:
        app: visus
    spec:
      nodeName: aims2.llnl.gov
      containers:
      - name: visus
        image: visus/ondemand:0.26b
        imagePullPolicy: Always
        # IfNotPresent helps when debugging so you don't have to push every single image to dockerhub
        imagePullPolicy: IfNotPresent
        command:
          - /bin/bash
          - -i
          - -c
        args: 
        #normal run command
          - "${ONDEMAND_HOME}/bin/start_service.sh"
        # debug using this so apache can be restarted from inside container
        #  - "tail -f /dev/null"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data_pcmdi
          name: data-pcmdi
        - mountPath: /data_captarm
          name: data-captarm
        - mountPath: /data/xml
          name: for-ganzberger1
        # below in volumes, the name 'naturerun' is mapped from its visus config, then it is copied to OpenVisus here
        - mountPath: /home/OpenVisus/visus.config
          name: naturerun
        - mountPath: /ssl-certs
          name: ssl
        - mountPath: /home/ondemand/conf/local.json
          name: local-json
	# Add mounthPath for data folders on the node


#      nodeSelector:
#        tier: frontend
      volumes:
        - name: data-pcmdi
          hostPath:
            path: /data_pcmdi
        - name: data-captarm
          hostPath:
            path: /data_captarm
        - name: for-ganzberger1
          hostPath:
            path: /scratch/for_ganzberger1/idx/bak/data
        # this creates a volume for the naturerun config, which is mounted to the OpenVisus home above
        - name: naturerun
          hostPath:
            path: /export/spetruzza1/ondemand/demos/visus_naturerun.config
            type: File
        - name: ssl
          hostPath:
            path: /etc/httpd/ssl-certs
        - name: local-json
          hostPath:
            path: /export/spetruzza1/ondemand/conf/local.json
        # Add hostPath for folders on the node

---
kind: Service
apiVersion: v1
metadata:
  name: visus
spec:
  selector:
    app: visus
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  name:visus-ingress  <ctc> todo: change name so ingress (/visus redirects) is differentable from the container itself
  name: visus
  namespace: userspace
  labels:
    traffic-type: external
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/ssl-redirect: "true"
# <ctc> disabled this and customized docker container to listen for the /visus prefix (not sure I like this, but seems the only way)
#    traefik.frontend.rule.type: PathPrefixStrip


spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: visus
          servicePort: 80
        path: /visus
---
